--- a/GL_AI_ML_NLP_Capstone_Project_Final.ipynb
+++ b/GL_AI_ML_NLP_Capstone_Project_Final.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "GL_AI_ML_NLP_Capstone_Project_Final.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMvnvXQLgh4VvuGqTkeUn0p",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPocHvYKna3VLsY7kAcnUPT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,17 +26,14 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "0zg_zYUPHVCU",
-        "colab_type": "code",
-        "colab": {}
+        "id": "wl8JuW1SI2Ru",
+        "colab_type": "text"
       },
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "**Test**"
+      ]
     }
   ]
 }
